@@ -1,4 +1,4 @@
-/* $Id: display.c,v 1.59 2003/01/29 17:10:27 ukai Exp $ */
+/* $Id: display.c,v 1.60 2003/01/29 17:38:14 ukai Exp $ */
 #include <signal.h>
 #include "fm.h"
 
@@ -360,13 +360,13 @@ displayBuffer(Buffer *buf, int mode)
     }
 
     if (buf->width == 0)
-	buf->width = COLS;
+	buf->width = INIT_BUFFER_WIDTH;
     if (buf->height == 0)
 	buf->height = LASTLINE + 1;
-    if ((buf->width != INIT_BUFFER_WIDTH && ((buf->type &&
-					      !strcmp(buf->type, "text/html"))
-					     || FoldLine))
-	|| buf->need_reshape) {
+    if (buf->sourcefile &&
+	((buf->width != INIT_BUFFER_WIDTH &&
+	  ((buf->type && !strcmp(buf->type, "text/html")) || FoldLine))
+	 || buf->need_reshape)) {
 	buf->need_reshape = TRUE;
 	reshapeBuffer(buf);
     }
